Updated Timer UI to use new layout, and using different Model structure with the driver, navigator, etc., being top-level attributes.